# TE2_pruebas_unitarias

./: CMakeLists.txt  README.md  main.cpp
Extra Clase 1/: Arista.cpp  Arista.h  CMakeLists.txt  Grafo.cpp  Grafo.h  Server.cpp  Server.h  Vertice.cpp  Vertice.h  cliente.h  iniciar.cpp
Extra Clase 1/Google_test/: AbsoluteDateTest.cpp  CMakeLists.txt  test1.cpp
Extra Clase 1/cliente/build-client-Desktop_Qt_5_15_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  client  cmake_install.cmake  rules.ninja
Extra Clase 1/cliente/build-client-Desktop_Qt_5_15_1_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-60673ce2f3be510eafcc.json  cmakeFiles-v1-95f905c3a4694f8e3807.json  codemodel-v2-a27f1b0acddd5fd40c64.json  index-2020-09-25T00-55-08-0899.json  target-client-Debug-83f647e4a40817ac721a.json  target-client_autogen-Debug-d11bf121dae25582fac8.json
Extra Clase 1/cliente/build-client-Desktop_Qt_5_15_1_GCC_64bit-Debug/client_autogen/: deps
Extra Clase 1/cliente/build-client-Desktop_Qt_5_15_1_GCC_64bit-Debug/client_autogen/EWIEGA46WW/: moc_widget.cpp
Extra Clase 1/cliente/build-client-Desktop_Qt_5_15_1_GCC_64bit-Debug/client_autogen/include/: ui_widget.h
Extra Clase 1/cliente/client/: CMakeLists.txt  Serv_client.cpp  client_es_CR.ts  widget.cpp  widget.h  widget.ui
Extraclase 1/: CMakeLists.txt  main.cpp
servidor/: Grafo.cpp  Server.cpp  Server.h  iniciar.cpp
